[package]
name = "avr_tc1_embassy_time"
version = "0.2.1"
edition = "2021"
author = "djdisodo@gmail.com"
license = "MIT"
documentation = "https://docs.rs/avr_tc0_embassy_time/latest/"
repository = "https://github.com/djdisodo/avr_tc0_embassy_time"
description = "embassy_time driver for avr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = "1.1.0"
embassy-time = "0.1.5"
avr-device = { version = "0.5.4", features = ["rt"] }
futures-util = { version = "0.3.28", default-features = false, features = ["portable-atomic"] }
vcell = { version = "0.1.3", optional = true }
env_int = "0.2.0"

[dependencies.avr-hal-generic]
git = "https://github.com/rahix/avr-hal"
rev = "3e362624547462928a219c40f9ea8e3a64f21e5f"

[dependencies.atmega-hal]
git = "https://github.com/rahix/avr-hal"
rev = "3e362624547462928a219c40f9ea8e3a64f21e5f"
features = ["atmega328p"]

[features]
default = ["default16MHz"]
default16MHz = ["freq16MHz", "prescalar8", "divider2", "embassy-time/tick-hz-256_000"]
stack_addr = ["dep:vcell"]

# frequency
freq16MHz = []

# prescalar
prescalar8 = []

# divider
divider2 = []

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
